# boxblock

./: .gitignore  .gitmodules  BoxBlockLg.psd  CMakeLists.txt  LICENSE  README  README.md  Slide for present  block.cc  block.hpp  generate_splash.py  vote.hpp
decor/: logo.data  splash.data  splash.xcf
src/: CMakeLists.txt  block.cc  block.hpp  chain.cc  chain.hpp  image.hpp  interface.cc  interface.hpp  main.cc  ui.cc  ui.hpp  vote.hpp
